fix: adjust modal margin for improved layout in DebtPage and FundPage components feat: enhance ShoppingPage with improved button layouts and input labels style: update CSS for consistent spacing in components

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,10 @@
   font-family: "Roboto Slab";
 }
 
+.space-y-8 > :not([hidden]) ~ :not([hidden]){
+  margin-top: 0 !important;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
